# bezier-splatting

./: .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml
.designs/: circular_curve_init.md
benchmarks/: benchmark_rasterizer.py
docs/: gsplat-integration-plan.md  mps-backend.md  research-ideation.md
docs/design/: true-enclosed-area-depth.md
eval/: README.md
eval/data/: README.md
eval/metadata/div2k_valid8/manifests/: DIV2K_valid_HR.json
notebooks/: vectorize.py
original_paper/arXiv-2503.16424v4/: main.bib  main.tex
original_paper/arXiv-2503.16424v4/sec/: 0_abstract.tex  1_intro.tex  2_related_work.tex  3_method.tex  4_experiments.tex  5_conclusion.tex  6_appendix.tex
original_paper/arXiv-2503.16424v4/tables/: comparison_lagre.tex  comparsion_kodak.tex  speed.tex
samples/: README.md
src/bezier_splatting/: __init__.py  adan.py  area.py  bezier.py  coords.py  losses.py  metrics.py  model.py  optimization.py  rasterizer.py  sampling.py  svg.py  topology.py
src/bezier_splatting/debug/: __init__.py  animation.py  assertions.py  checkpoints.py  collectors.py  inspector.py  samples.py  tracker.py  viz.py
src/eval/: __init__.py  cli.py  core.py
tests/: conftest.py  test_adan.py  test_animation.py  test_area.py  test_bezier.py  test_debug_compat.py  test_eval.py  test_gradients.py  test_losses.py  test_model.py  test_optimization_modes.py  test_optimizer_surgery.py  test_raster_backend_config.py  test_rasterizer.py  test_rasterizer_mps.py  test_rasterizer_parity.py  test_reconstruction.py  test_sampling.py  test_svg.py  test_topology.py
