[project]
name = "bezier-splatting"
version = "0.1.0"
description = "Differentiable vector graphics rendering via Bézier splatting (NeurIPS 2025)"
readme = "README.md"
authors = [
    { name = "ryanlyn", email = "mailboxryanlin@icloud.com" }
]
requires-python = ">=3.11"
dependencies = [
    "marimo>=0.19.7",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "setuptools>=80.10.2",
    "torch>=2.10.0",
]

[project.scripts]
bezier-debug = "bezier_splatting.debug.inspector:main"
bezier-repro = "bezier_splatting.repro.cli:main"

[project.optional-dependencies]
cuda = [
    "gsplat>=1.0",
]
debug = ["trackio", "gradio>=5.0.0"]
repro = [
    "lpips>=0.1.4",
    "pytorch-msssim>=1.0.0",
]

[build-system]
requires = ["uv_build>=0.8.23,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "jaxtyping>=0.2.34",
    "beartype>=0.19.0",
]
